# nnops

./: .gitignore  CMakeLists.txt  Cargo.toml  MANIFEST.in  README.md  clippy.toml  pyproject.toml  rust-toolchain.toml  rustfmt.toml  setup.py
.cargo/: config.toml
.github/workflows/: main.yml
benches/: cpu_ops.rs  mps_ops.rs
benches/common/: mod.rs
csrc/: data_type.cpp  data_type.h  device.cpp  device.h  python.cpp  tensor.cpp  tensor.h  tensor_shape.cpp  tensor_shape.h
csrc/cpu/: device.cpp  device.h
csrc/cuda/: device.cpp  device.h
csrc/npu/: device.cpp  device.h
nnops/: CMakeLists.txt  common.h  data_type.cpp  data_type.h  device.cpp  device.h  dtype.py  operator.cpp  operator.h  random.cpp  random.h  scalar.cpp  scalar.h  signature.h  tensor.cpp  tensor.h  tensor.py  tensor_accessor.cpp  tensor_accessor.h  tensor_buffer.cpp  tensor_buffer.h  tensor_indexing.cpp  tensor_indexing.h  tensor_iterator.cpp  tensor_iterator.h  tensor_meta.cpp  tensor_meta.h  tensor_operator.h  tensor_shape.cpp  tensor_shape.h  tensor_util.cpp  tensor_util.h
nnops/cpu/: CMakeLists.txt  device.cpp  device.h
nnops/cpu/ops/: CMakeLists.txt  binary_ops.cpp  binary_ops.h  functional.h  linear.cpp  math.cpp  math.h  matmul.cpp  unary_ops.cpp  unary_ops.h
nnops/cuda/: CMakeLists.txt  copy.cu  device.cpp  device.cu  device.h
nnops/npu/: CMakeLists.txt  device.cpp  device.h
python/: CMakeLists.txt  Cargo.toml
python/csrc/: CMakeLists.txt  binary_ops.cpp  binary_ops.h  data_type.cpp  device.cpp  ops.cpp  python.cpp  random.cpp  tensor.cpp  tensor.h  tensor_meta.cpp  tensor_shape.cpp
python/nnops/: __init__.py  device.py  dtype.py  ops.py  tensor.py
python/src/: device.rs  dtype.rs  lib.rs  tensor.rs
scripts/: README.md  bench.py  build.py  install_deps.ps1  install_deps.sh
src/: common.rs  data_type.rs  device.rs  lib.rs  random.rs  scalar.rs
src/cpu/ops/: binary_ops.rs  matmul.rs  unary_ops.rs
src/mps/: kernel.rs  mod.rs  shaders.metal  shaders.rs
src/mps/ops/: binary_ops.rs  matmul.rs  mod.rs  unary_ops.rs
src/tensor/: accessor.rs  buffer.rs  iterator.rs  meta.rs  mod.rs  util.rs
tests/: conftest.py  test_device.py  test_dtype.py  test_ops.py  test_tensor.py
tests/cpp/: CMakeLists.txt  test_tensor.cpp
