[workspace]
members = ["python"]

[workspace.package]
version = "0.2.0"
edition = "2021"

[package]
name = "nnops"
version.workspace = true
edition.workspace = true
description = "A lightweight neural network operator library (Rust port)"

[features]
default = ["cpu"]
cpu = []
cuda = []
mps = ["dep:metal"]

[dependencies]
rand = "0.8"
rand_distr = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.28", optional = true }