[build-system]
requires = ["scikit-build-core==0.11.5", "nanobind==2.7.0"]
build-backend = "scikit_build_core.build"

[project]
name = "nnops"
dynamic = ["version"]
description = "Neural Network Operators"
readme = "README.md"
authors = [
    {name = "Jiau Zhang", email = "jiauzhang@163.com"},
]
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Programming Language :: Python :: 3.8',
]
keywords = [
    'Deep Learning',
    'Neural Network Operators',
    'Artificial Intelligence',
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/jiauzhang/nnops"

[tool.scikit-build]
minimum-version = "build-system.requires"
build.verbose = false
logging.level = "INFO"
cmake.version = ">=3.26.1"
wheel.install-dir = "nnops"
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.wheel.packages]
nnops = "python/nnops"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "python/nnops/version.py"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
norecursedirs = ["tests/cpp"]
