[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nnops"
dynamic = ["version"]
description = "Neural Network Operators"
readme = "README.md"
authors = [
    {name = "Jiau Zhang", email = "jiauzhang@163.com"},
]
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
]
keywords = [
    'Deep Learning',
    'Neural Network Operators',
    'Artificial Intelligence',
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
]
optional-dependencies = { cuda = [], mps = [] }

[project.urls]
Homepage = "https://github.com/jiauzhang/nnops"

[tool.maturin]
module-name = "nnops._rs"
manifest-path = "python/Cargo.toml"
python-source = "python"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]